--- a/css/estilos.css
+++ b/css/estilos.css
@@ -105,6 +105,41 @@ main {
 }
 
 
+/** servicios **/
+
+div.servicios {
+    margin-top: 30px;
+}
+
+div.servicios nav {
+    background-color: #00b8e4;
+}
+
+div.servicios nav a {
+    padding: 10px;
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+}
+
+div.servicios nav a:hover {
+    background-color: #db008d;
+}
+
+div.nuestros-servicios {
+    position: relative;
+    height: 200px;
+}
+
+div.nuestros-servicios>div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #e1e1e1;
+    padding: 20px;
+}
+
+
 /** Entradas de post**/
 
 article {
