--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,9 +21,10 @@ header {
     padding: 20px 0;
 }
 
-.activo {
+
+/* .activo {
     border: 5px solid yellow;
-}
+} */
 
 div.contenedor {
     width: 1200px;
@@ -105,7 +106,7 @@ main {
 }
 
 
-/** servicios **/
+/** NUESTROS SERVICIOS **/
 
 div.servicios {
     margin-top: 30px;
@@ -122,6 +123,10 @@ div.servicios nav a {
     text-decoration: none;
 }
 
+div.servicios nav a.activo {
+    background-color: #db008d;
+}
+
 div.servicios nav a:hover {
     background-color: #db008d;
 }
@@ -135,8 +140,10 @@ div.nuestros-servicios>div {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #e1e1e1;
+    background-color: #db008d;
     padding: 20px;
+    display: none;
+    color: white;
 }
 
 
